codex-rs/tui/src/snapshots/codex_tui__status_indicator_widget__tests__renders_truncated.snap
---
source: tui/src/status_indicator_widget.rs
expression: terminal.backend()
---
"• Выполняю (0s • esc…"
"                    "
